--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
     <title>Recipes</title>
 </head>
+
+
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/pizza.html">Pizza</a></li>
-        <li><a href="recipes/oat-cookie.html">Oatmeal Raisin Cookies</a></li>
-        <li><a href="recipes/pumpkin-bread.html">Spiced Pumpkin Bread</a></li>
-    </ul>
-    
+    <h1 class="title">Odin Recipes</h1>
+    <img class="banner" src="https://imagesvc.meredithcorp.io/v3/jumpstartpure/image?url=https://cdn-img.health.com/sites/default/files/styles/master_4_3/public/styles/main/public/sb10066792a-001.jpg?itok=Zl-O6qIU&w=1280&h=720&q=90&c=cc">  
+        <div>
+            <ul>
+                <li><a href="recipes/pizza.html">Pizza</a></li>
+                <li><a href="recipes/oat-cookie.html">Oatmeal Raisin Cookies</a></li>
+                <li><a href="recipes/pumpkin-bread.html">Spiced Pumpkin Bread</a></li>
+            </ul>
+        </div>
 </body>
+
 </html>
