--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
 
 <body>
-    <h1 class="title">ODIN RECIPES</h1>
+    <div><h1>ODIN RECIPES</h1></div>
     <img class="banner" src="https://imagesvc.meredithcorp.io/v3/jumpstartpure/image?url=https://cdn-img.health.com/sites/default/files/styles/master_4_3/public/styles/main/public/sb10066792a-001.jpg?itok=Zl-O6qIU&w=1280&h=720&q=90&c=cc">  
         <div>
-            <ul>
-                <button class="recipes"><a href="recipes/pizza.html">Pizza</a></button>
-                <button class="recipes"><a href="recipes/oat-cookie.html">Oatmeal Raisin Cookies</a></button>
-                <button class="recipes"><a href="recipes/pumpkin-bread.html">Spiced Pumpkin Bread</a></button>
-            </ul>
+                <button class="buttons"><a href="recipes/pizza.html">Pizza</a></button>
+                <button class="buttons"><a href="recipes/oat-cookie.html">Oatmeal Raisin Cookies</a></button>
+                <button class="buttons"><a href="recipes/pumpkin-bread.html">Spiced Pumpkin Bread</a></button>
         </div>
 
         
